--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,37 @@
+@import "~slick-carousel/slick/slick.css";
+@import "~slick-carousel/slick/slick-theme.css";
+
 .App {
-  margin: 1.5rem 2rem;
+  width: 90%;
+  margin: 8rem auto;
+  height: 600px;
 }
 
-.slider__item {
-  height: 300px;
-  width: 300px;
-  color: #fff;
-  background-color: #000;
+.arrow {
+  position: absolute;
+  cursor: pointer;
+  z-index: 10;
+}
+
+.next {
+  right: 0%;
+  top: 50%;
+}
+
+.prev {
+  left: 0%;
+  top: 50%;
+}
+
+.slide {
+  transition: transform 300ms;
+  opacity: 0.5;
+}
+
+.leftSlide {
+  transform: scale(0.7);
+}
+
+.nextSlide {
+  transform: scale(0.5);
 }
